--- a/templates/make-post.html
+++ b/templates/make-post.html
@@ -11,7 +11,7 @@
           {% else %}
           <h1>New Post</h1>
           {% endif %}
-          <span class="subheading">You're going to make a great blog post!</span>
+          <span class="subheading">You're going to make a great post!</span>
         </div>
       </div>
     </div>
