--- a/templates/make-post.html
+++ b/templates/make-post.html
@@ -24,7 +24,7 @@
       <div class="col-lg-8 col-md-10 mx-auto">
         {{ ckeditor.load() }}
         {{ ckeditor.config(name='body') }}
-        {{ render_form(form, novalidate=True, button_map={"submit": "primary"}) }}
+        {{ render_form(form, novalidate=True, enctype="multipart/form-data", button_map={"submit": "primary"}) }}
       </div>
     </div>
   </div>
