--- a/templates/post.html
+++ b/templates/post.html
@@ -4,7 +4,7 @@
 <header class="masthead" style="background-image: url('{{ post.img_url }}')">
   <div class="container position-relative px-4 px-lg-5">
     <div class="row gx-4 gx-lg-5 justify-content-center">
-      <div class="col-md-10 col-lg-8 col-xl-7">
+      <div class="col-12 col-md-11 col-lg-9 col-xl-9">
         <div class="post-heading">
           <h1>{{ post.title }}</h1>
           <h2 class="subheading">{{ post.subtitle }}</h2>
@@ -19,7 +19,7 @@
 <article>
   <div class="container px-4 px-lg-5">
     <div class="row gx-4 gx-lg-5 justify-content-center">
-      <div class="col-md-10 col-lg-8 col-xl-7">
+      <div class="col-12 col-md-11 col-lg-9 col-xl-9">
         {{ post.body|safe }}
         {% if current_user.id == 1 %}
         <div class="d-flex justify-content-end mb-4">
