--- a/templates/footer.html
+++ b/templates/footer.html
@@ -18,6 +18,10 @@
   </div>
 </footer>
 
+<button id="backToTop" class="wf-top" aria-label="Back to top" title="Back to top">
+  <i class="fas fa-chevron-up" aria-hidden="true"></i>
+</button>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 <script src="{{ url_for('static', filename='js/scripts.js') }}"></script>
 </body>
