--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
     <div class="row gx-4 gx-lg-5 justify-content-center">
       <div class="col-md-11 col-lg-9 col-xl-9">
         <div class="site-heading">
-          <h1>WonderFloyd</h1>
+          <h1 class="wf-gradient-text">WonderFloyd</h1>
           <span class="subheading">Reliable, Informative, Enjoyable</span>
         </div>
       </div>
